--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,7 @@
 ---
 galaxy_info:
   author: Mark Stillwell
-  description: DNSmasq caching nameserver for Ubuntu
+  description: fail2ban for Ubuntu
   license: GPLv2
   min_ansible_version: 1.2
   platforms:
@@ -13,5 +13,4 @@ galaxy_info:
     - saucy
     - trusty
   categories:
-  - network
 dependencies: []
