--- a/.travis.yml
+++ b/.travis.yml
@@ -2,38 +2,39 @@
 language: python
 python: "2.7"
 
-env:
-    - SITE=test.yml
-
 before_install:
 
-    - sudo apt-get update -qq
+    - sudo apt-get update
+    - sudo apt-get -y upgrade
+    - sudo apt-get -y autoremove
+    - sudo apt-get -y clean
+
+    # Remove MySQL.
+    - sudo apt-get -y purge 'mysql*'
     - sudo apt-get -y autoremove
     - sudo apt-get -y autoclean
+    - sudo rm -rf /var/lib/mysql
+    - sudo truncate -s 0 /var/log/mysql/error.log
+
 
 install:
 
     # Install Ansible.
-    - sudo pip install ansible
-
-    # Add ansible.cfg to pick up roles path.
-    - "printf '[defaults]\nroles_path = ../' > ansible.cfg"
+    - sudo pip install --upgrade ansible
+    - ansible-playbook --version
 
 script:
+
     # Check the role/playbook's syntax.
-    - ansible-playbook -i tests/inventory tests/$SITE --syntax-check
+    - ansible-playbook -i travis/inventory site.yml --syntax-check
 
     # Run the role/playbook with ansible-playbook.
-    - ansible-playbook -i tests/inventory tests/$SITE --connection=local --sudo
+    - ansible-playbook -i travis/inventory site.yml
 
+    # Idempotence Test
     - >
-      ansible-playbook -i tests/inventory tests/$SITE --connection=local --sudo
-      | grep -q 'changed=0.*failed=0'
+      ansible-playbook -i travis/inventory site.yml
+      | grep -q 'changed=1 .*failed=0'
       && (echo 'Idempotence test: pass' && exit 0)
       || (echo 'Idempotence test: fail' && exit 1)
 
-    # Some debugging (show all the logs).
-    - "sudo ls -lah /var/log"
-
-    # FIXME: query local name service
-    
