--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,4 @@
 ---
-fail2ban_default_bantime: 10800
-fail2ban_default_findtime: 10800
-fail2ban_default_maxretry: 3
+logwatch_mailto: root
+logwatch_range: Yesterday
+logwatch_detail: Low
