--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,2 +1,36 @@
 ---
-- include: fail2ban.yml
+- name: install logwatch packages
+  apt: 
+    pkg: "{{ item }}" 
+    state: latest 
+    update_cache: yes 
+    cache_valid_time: 600
+  with_items:
+    - logwatch
+
+- name: ensure /var/cache/logwatch exists and has correct permissions
+  file:
+    path: /var/cache/logwatch
+    owner: root
+    group: root
+    mode: 0755
+    state: directory
+ 
+- name: update /etc/logwatch/conf/logwatch.conf from template
+  template:
+    src: etc/logwatch/conf/logwatch.conf
+    dest: /etc/logwatch/conf/logwatch.conf
+    owner: root
+    group: root
+    mode: 0644
+  notify:
+    - restart logwatch
+
+- name: ensure logwatch service is started and enabled
+  service:
+    name: "{{ item }}"
+    enabled: yes
+    state: started
+  with_items:
+    - logwatch
+
