--- a/site.yml
+++ b/site.yml
@@ -1,3 +1,17 @@
+- hosts: localhost
+  connection: local
+  sudo: False
+  tasks:
+
+    - name: check out roles needed for testing from github.com
+      git:
+        repo: 'https://github.com/marklee77/ansible-role-{{ item }}'
+        dest: roles/marklee77.{{ item }}
+        update: yes
+      with_items:
+        - mariadb
+        - mailserver
+
 - hosts: all
   sudo: True
   roles:
