maybe this will work?

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,9 @@ install:
     - sudo pip install --upgrade ansible
     - ansible-playbook --version
 
+    # Install required roles.
+    - ansible-playbook -i travis/inventory getroles.yml 
+
 script:
 
     # Check the role/playbook's syntax.
