--- a/getroles.yml
+++ b/getroles.yml
@@ -1,5 +1,6 @@
 ---
 - hosts: all
+  gather_facts: False
   sudo: False
   tasks:
 
@@ -14,4 +15,3 @@
         - mariadb
         - tomcat6
         - mailserver
-
