--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,13 +1,13 @@
 ---
 galaxy_info:
   author: Mark Stillwell
-  description: logwatch for Ubuntu
+  description: manage upgrades for Ubuntu
   license: GPLv2
   min_ansible_version: 1.2
   platforms:
   - name: Ubuntu
     versions:
+    - precise
     - trusty
   categories:
-dependencies: 
-    - marklee77.mailserver
+dependencies: []
