--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,22 +7,21 @@
 - name: autoremove unneeded packages
   command: apt-get -y autoremove
   register: aptget_autoremove
-
-- debug: msg="{{aptget_autoremove}}"
+  changed_when: aptget_autoremove.stdout.find("REMOVE") != -1
 
 - name: autoclean archived packages
   command: apt-get -y autoclean
-  register: aptget_autoclean
-
-- debug: msg="{{aptget_autoclean}}"
+  changed_when: false
 
 - name: register running kernel version
   command: uname -r
   register: running_kernel
+  changed_when: false
 
 - name: register installed kernel version
   shell: dpkg -l | grep "linux-image-[0-9]" | sort | tail -1 | perl -ane 'print substr($F[1], 12), "\n"'
   register: installed_kernel
+  changed_when: false
 
 - name: reboot if kernel version has changed
   command: /sbin/reboot
